--- a/app/templates/view_itineraries.html
+++ b/app/templates/view_itineraries.html
@@ -33,7 +33,7 @@
                                     <ul>
                                         {% for poi in pois %}
                                             <li>{{ poi.name }}  
-                                            ({{ poi.original_latitude }}, {{ poi.original_longitude }})</li>
+                                            (Latitude: {{ poi.original_latitude }}, Longitude: {{ poi.original_longitude }})</li>
                                         {% endfor %}
                                     </ul>
                                 </li>
